Fix formatting issue with project cards on smaller devices

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -61,3 +61,9 @@
         margin: 0 0rem 2.3rem 0rem;
     }
 }
+
+@media only screen and (max-width: 381px) {
+    .Project {
+        height: 27rem;
+    }
+}
